implement functionality for storing/requesting entries from db